[gd_scene load_steps=5 format=3 uid="uid://bg4atrhf1mw5v"]

[ext_resource type="Script" path="res://scripts/health_bar.gd" id="1_vmwjf"]
[ext_resource type="Texture2D" uid="uid://tolbrrmamcty" path="res://assets/images/ui/progress-bar-under.png" id="2_emytg"]
[ext_resource type="Texture2D" uid="uid://baofgl10mp3gv" path="res://assets/images/ui/progress-bar-over.png" id="3_adghq"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qcbpx"]
properties/0/path = NodePath("VBoxContainer/NameMargin/NameLabel:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("VBoxContainer/ProgressBar:value")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("VBoxContainer/ProgressBar:tint_progress")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vmwjf")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qcbpx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="NameLabel" type="Label" parent="VBoxContainer/NameMargin"]
layout_mode = 2
text = "NAME"
horizontal_alignment = 2

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
value = 50.0
rounded = true
texture_under = ExtResource("2_emytg")
texture_over = ExtResource("3_adghq")
texture_progress = ExtResource("2_emytg")
tint_progress = Color(0.336815, 0.442094, 0.892997, 1)
